Irrelevant require package removed.

--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,6 @@
   "license": "proprietary",
   "description": "A short salutation text to be used in drupal pages.",
   "require": {
-    "php": ">=7.4",
-    "another-vendor/package": "1.*"
+    "php": ">=7.4"
   }
 }
