--- a/composer.json
+++ b/composer.json
@@ -4,5 +4,13 @@
   "description": "A short salutation text to be used in drupal pages.",
   "require": {
     "php": ">=7.4"
-  }
+  },
+  "type": "composer-plugin",
+  "homepage": "https://github.com/PaulKallio/salutation",
+  "authors": [
+    {
+      "name": "Paul Kallio",
+      "email": "paul.kallio@ibm.com"
+    }
+  ]
 }
