--- a/composer.json
+++ b/composer.json
@@ -3,21 +3,14 @@
   "license": "proprietary",
   "description": "A short salutation text to be used in drupal pages.",
   "require": {
-    "php": ">=7.4",
-    "composer-plugin-api": "^1.1 || ^2.0"
+    "php": ">=7.4"
   },
-  "type": "composer-plugin",
+  "type": "drupal-module",
   "homepage": "https://github.com/PaulKallio/salutation",
   "authors": [
     {
       "name": "Paul Kallio",
       "email": "paul.kallio@ibm.com"
     }
-  ],
-  "extra": {
-    "class": "Drupal\\salutation\\Salutation",
-    "branch-alias": {
-      "dev-master": "0.x-dev"
-    }
-  }
+  ]
 }
